<resources>
    <string name="app_name">Jobbies</string>

    <string name="title_activity_maps">Map</string>

    <string name="title_activity_my_offers">My offers</string>

    <string name="title_activity_add_new_job">Add new job</string>

    <string name="find_job">Find job</string>
    <string name="offer_job">Offer job</string>

    <string name="facebook_app_id">1770280953186518</string>
    <string name="title_activity_authentication">Jobbies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_list">List</string>
    <string name="action_map">Map</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="job_title">Job title</string>
    <string name="job_description">Type few words about the job you offer&#8230;</string>
    <string name="job_location">Where do you need your job done? (location)</string>
    <string name="job_paid">Paid job</string>
    <string name="job_voluntary">Voluntary job</string>

    <string name="more">more</string>
    <string name="empty_string"></string>
    <string name="apply_button">Apply</string>
    <string name="show_on_map">Show on map</string>

    <string name="edit">Edit</string>

    <string name="validation_error_title">Title cannot be empty, fill it before posting your offer.</string>
    <string name="validation_error_description">Description cannot be empty, fill it before posting your offer.</string>
    <string name="validation_error_location">Location cannot be empty, fill it before posting your offer.</string>
    <string name="validation_error_date">Date has to be in the future, fix it before posting your offer.</string>
    <string name="validation_error_category">You have to choose category before posting your offer.</string>
    <string name="action_volunteer">Volunteer</string>
    <string name="title_activity_ftiler">FtilerActivity</string>

</resources>
